# dmnameof

./: .travis.yml  CMakeLists.txt  README.md
include/: dmnameof.h
test/dmnameofexample/: example.cpp
test/dmnameoftest/: test.cpp
